# examples

./: .gitignore  Makefile  README.md  env.example  pyproject.toml
claude-agents/: .env.example  README.md  main.py
crewai/: README.md  main.py
customer-support/: README.md  claude_agents.py  crewai.py  crewai_example.py  langgraph_example.py  openai_agents.py
finance/: README.md  claude_agents.py  crewai.py  crewai_example.py  langgraph_example.py  openai_agents.py
healthcare/: README.md  claude_agents.py  crewai.py  crewai_example.py  langgraph_example.py  openai_agents.py
langgraph/: .env.example  README.md  main.py  simple_refund_approval.py
openai-agents/: .env.example  README.md  main.py
safety/: README.md  main.py
